Potential memory leak in TypedMethodOptionMatcher

XMLWordPrintable

    • b26

      TypedMethodOptionMatcher owns ccstr value (vs. os::strdup_check_oom()), but never frees it in destructor.

      It does not appear to a real issue so far, because TypedMethodOptionMatcher seems immortal. Given it releases _option string, it should also release ccstr value.

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: