8249144: Potential memory leak in TypedMethodOptionMatcher